# bayes_classifier

./: Cargo.toml  README.md
python/: X_export.csv  naive_bayes.py  plot_generator.py  rust_bayes.py  y_export.csv
src/: lib.rs
