[package]
name = "rust_bayes_module"
version = "0.1.0"
edition = "2021"
authors = ["Peter Krull"]

[lib]
name = "rust_bayes_module"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.31.2"
indicatif = {version = "0.17.1",features = ["rayon"]}

# For parallelizing
rayon = "1.5"

# For python bindings
pyo3 = { version = "0.17.2" , features = ["extension-module"] }
numpy = "0.17.2"
ndarray = "0.15.6"
nalgebra-numpy = "0.3.0"